# TurtleStepFX

TurtleStepFX_GitHub_Repo/: CMakeLists.txt  README.md
TurtleStepFX_GitHub_Repo/Source/: CMakeLists.txt  Effects.cpp  Effects.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  Sequencer.cpp  Sequencer.h
